[package]
name = "arise"
version = "0.1.0"
edition = "2021"
authors = ["Bulut Gocer <gocerbulutcan@gmail.com>"]
publish = false
exclude = ["dist", "build", "assets", "credits"]

# -----------------------------------------------------------------------------
# Targets
# -----------------------------------------------------------------------------
# Binary crate olarak ana hedef: src/main.rs
# Bu yüzden ek bir [bin] bölümü tanımlamaya gerek yok

# -----------------------------------------------------------------------------
# Profiles
# -----------------------------------------------------------------------------

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
debug = false
lto = false
codegen-units = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
debug = false

# -----------------------------------------------------------------------------
# Workspace
# -----------------------------------------------------------------------------

[workspace]
members = [
    "crates/assets",
    "crates/engine",
    "crates/storage"
]

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------

[workspace.dependencies]
serde = "1.0.159"
strum = "0.25.0"
strum_macros = "0.25.1"
thiserror = "1.0"
derive_more = "0.99.17"
bevy_ecs_macros = "0.15.0"
bevy_ecs = "0.15.0"
bevy_reflect = "0.15.0"
bevy_input = "0.15.0"
bevy_state = "0.15.0"
bevy_kira_audio = { version = "0.20.0", features = ["mp3", "wav"] }
leafwing-input-manager = { version = "0.16.0", features = [
    "mouse",
    "keyboard",
] }
ron = "0.10.0"
bevy_time = "0.15.0"
bevy_math = "0.15.0"
# We value minimizing the binary sizes and keeping the CLI maximally simple over a more feature complete CLI library
# like clap.
argh = "0.1.12"
rand = "0.8.5"
console_error_panic_hook = "0.1.7"
bevy_asset_loader = { version = "0.22.0", features = [
    "2d",
    "3d",
    "standard_dynamic_assets",
] }
engine = { path = "crates/engine" }


[workspace.dependencies.bevy]
version = "0.15.0"
default-features = false
features = [
    # Non-default/'extra' features features
    "serialize",
    # Part of bevy's default features
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "hdr",
    "ktx2",
    "tonemapping_luts",
    "multi_threaded",
    "png",
    "x11",
    "bevy_gizmos",
    "webgl2",
    "zstd",
    "bevy_dev_tools"
]

[dev-dependencies]
rstest = "0.18.2"
assert_cmd = "2.0.12"


[dependencies]
bevy = { workspace = true }
bevy_rapier2d = { version = "0.28.0", features = [
    "simd-stable",
    "debug-render-2d",
] }
bevy-inspector-egui = { version = "0.30" }
bevy_asset_loader = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
ron = { workspace = true }
rand = { workspace = true }
bevy_kira_audio = { workspace = true }
winit = "0.30.3"
image = "0.24.6"
thiserror = { workspace = true }
leafwing-input-manager = { workspace = true }
engine = { workspace = true }
assets = { path = "crates/assets" }




[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
storage = { path = "crates/storage", optional = true }

# -----------------------------------------------------------------------------
# Build Dependencies
# -----------------------------------------------------------------------------

[build-dependencies]
embed-resource = "3.0.2"
num_cpus = "1.16.0"
smallvec = "1.13.2"

# -----------------------------------------------------------------------------
# Clippy Lint Configuration
# -----------------------------------------------------------------------------

[lints.clippy]
type_complexity = "allow"
