[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
leafwing-input-manager = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
rand = { workspace = true }
bevy_kira_audio = { workspace = true }
bevy_asset_loader = { workspace = true }
ron = { workspace = true }
bevy_ecs_macros = { workspace = true }

# required due to bevy_asset_loader expecting bevy to be imported
bevy = { workspace = true }
